added custom modal to death scene

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <button class="playButton">Play</button>
       </div>
     </div>
+    <!-- Custom Alert Modal -->
+    <div id="customAlertModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">×</span>
+        <p>Your pet is dead ☠️!</p>
+      </div>
+    </div>
     <script src="app.js" async defer></script>
   </body>
 </html>
